tests/compile-fail/integration__integration__type_check__jump_time.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: unexpected token `2.4`
   ┌─ <input>:28:34
   │
28 │         if (2 == 2) goto label @ 2.4;
   │                                  ^^^ unexpected token
   │
   = 
     Expected one of "-", INT, INT_BIN or INT_HEX


